HTMLMediaElement.prototype.canPlayType accounting for 250-750ms first loading theverge.com https://bugs.webkit.org/show_bug.cgi?id=158335 <rdar://problem/26615416>

Reviewed by Brent Fulgham.

* WebCore.xcodeproj/project.pbxproj: Add AVFoundationMIMETypeCache.

* platform/graphics/avfoundation/objc/AVFoundationMIMETypeCache.h: Added.
* platform/graphics/avfoundation/objc/AVFoundationMIMETypeCache.mm: Added.
(WebCore::AVFoundationMIMETypeCache::AVFoundationMIMETypeCache):
(WebCore::AVFoundationMIMETypeCache::loadTypes):
(WebCore::AVFoundationMIMETypeCache::types):
(WebCore::AVFoundationMIMETypeCache::singleton):

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::registerMediaEngine): Start MIME type loading.
(WebCore::MediaPlayerPrivateAVFoundationObjC::getSupportedTypes): Use AVFoundationMIMETypeCache.
(WebCore::MediaPlayerPrivateAVFoundationObjC::supportsType): Ditto.
(WebCore::MediaPlayerPrivateAVFoundationObjC::supportsKeySystem): Ditto.
(WebCore::avfMIMETypes): Deleted.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::registerMediaEngine): Start MIME type loading.
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::isAvailable): Use AVFoundationMIMETypeCache.
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::getSupportedTypes): Ditto.
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::supportsType): Ditto.
(WebCore::mimeTypeCache): Deleted.


Canonical link: https://commits.webkit.org/176613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201831 268f45cc-cd09-0410-ab3c-d52691b4dbfc